# Poltergeist

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md
.github/workflows/: ci.yml  pr.yml
assets/: Icon to Font Substitution.txt
crates/poltergeist-app/: Cargo.toml  build.rs
crates/poltergeist-app/lang/: _annotate_status_tr.py  _annotate_tr.py  _generate_po.py
crates/poltergeist-app/lang/de/LC_MESSAGES/: poltergeist-app.po
crates/poltergeist-app/lang/es/LC_MESSAGES/: poltergeist-app.po
crates/poltergeist-app/lang/fr/LC_MESSAGES/: poltergeist-app.po
crates/poltergeist-app/src/: i18n.rs  icon_registry.rs  main.rs  picker.rs
crates/poltergeist-app/ui/: main.slint
crates/poltergeist-core/: Cargo.toml
crates/poltergeist-core/src/: context.rs  contracts.rs  lib.rs  models.rs  tokens.rs
crates/poltergeist-io/: Cargo.toml
crates/poltergeist-io/src/: config.rs  database.rs  lib.rs  team_pack.rs  translation.rs
crates/poltergeist-platform-win/: Cargo.toml
crates/poltergeist-platform-win/src/: cursor.rs  focus.rs  hotkeys.rs  injector.rs  lib.rs  single_instance.rs  theme.rs
docs/: compatibility-contracts.md  migration-guide.md  release-checklist.md  validation-report.md
