[workspace]
members = [
    "crates/poltergeist-app",
    "crates/poltergeist-core",
    "crates/poltergeist-io",
    "crates/poltergeist-platform-win",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
authors = ["Lutz Schwemer Panchez"]
rust-version = "1.77"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
deepl = "0.7"
csv = "1"
calamine = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
slint = "1"
slint-build = "1"
once_cell = "1"
arboard = "3"
global-hotkey = "0.6"
rfd = "0.17.2"

[workspace.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
