[package]
name = "poltergeist-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "poltergeist"
path = "src/main.rs"

# `admin-edition`: fixed Admin runtime (ignores `_admin.flag` / `POLTERGEIST_EDITION`).
# CI builds the default binary for users and `--features admin-edition` for admins.
[features]
default = []
admin-edition = []

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
slint.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono.workspace = true
arboard.workspace = true
once_cell.workspace = true
uuid.workspace = true
rfd.workspace = true
poltergeist-core = { path = "../poltergeist-core" }
poltergeist-io = { path = "../poltergeist-io" }
poltergeist-platform-win = { path = "../poltergeist-platform-win" }
tray-icon = { version = "0.22.1", default-features = false }
tauri-winrt-notification = "0.7.2"

[build-dependencies]
winres = "0.1"
slint-build.workspace = true
