[package]
name = "poltergeist-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
deepl.workspace = true
csv.workspace = true
calamine.workspace = true
tracing.workspace = true
chrono.workspace = true
regex.workspace = true
poltergeist-core = { path = "../poltergeist-core" }
